--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -21,8 +21,8 @@ body{
 }
 
 input[type="text"]{
-    width: 70%;
-    padding: 20px;
+    width: 65%;
+    padding: 20px 20px 20px 40px;
     background:#181c22;
     border: 0;
     float: left;
@@ -64,7 +64,7 @@ li:hover{
 }
 
 h1{
-    background: url(/logo.png) no-repeat center;
+    background: url(/assets/logo.png) no-repeat center;
     margin-bottom: 0;
     text-indent: -10000px;
 }
