added favicon routing, updated delete handler to use _id instead of text, updated corresponding ajax request and view

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -19,7 +19,7 @@
         <ul>
             <!-- list item -->
             <% todos.forEach(obj => { %>
-                <li> <%= obj.item; %> </li>
+                <li data-id="<%= obj._id %>"> <%= obj.item; %> </li>
             <% }); %>
         </ul>
     </div>
